Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/AIS/AISInteractiveContext.h

extern "C" DECL_EXPORT void* AIS_InteractiveContext_Ctor79560492(
	void* MainViewer);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_Ctor27F4A3E3(
	void* MainViewer,
	void* Collector);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Delete(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_CloseCollector(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_OpenCollector(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Display7BDA0103(
	void* instance,
	void* anIobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayBB87E00C(
	void* instance,
	void* anIobj,
	int amode,
	int aSelectionMode,
	bool updateviewer,
	bool allowdecomposition);
extern "C" DECL_EXPORT void AIS_InteractiveContext_LoadFDB02EB(
	void* instance,
	void* aniobj,
	int SelectionMode,
	bool AllowDecomp);
extern "C" DECL_EXPORT void AIS_InteractiveContext_EraseB05E0FC3(
	void* instance,
	void* aniobj,
	bool updateviewer,
	bool PutInCollector);
extern "C" DECL_EXPORT void AIS_InteractiveContext_EraseModeFDB02EB(
	void* instance,
	void* aniobj,
	int aMode,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_EraseAllAE8C3818(
	void* instance,
	bool PutInCollector,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayAllAE8C3818(
	void* instance,
	bool OnlyFromCollector,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplayFromCollector7BDA0103(
	void* instance,
	void* anIObj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_EraseSelectedAE8C3818(
	void* instance,
	bool PutInCollector,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisplaySelected461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_KeepTemporary4F47E777(
	void* instance,
	void* anIObj,
	int InWhichLocal);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Clear7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ClearPrsFDB02EB(
	void* instance,
	void* aniobj,
	int aMode,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Remove7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_RemoveAll461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Hilight7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_HilightWithColor80F07260(
	void* instance,
	void* aniobj,
	int aCol,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Unhilight7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDisplayPriority4F47E777(
	void* instance,
	void* anIobj,
	int aPriority);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetZLayer4F47E777(
	void* instance,
	void* theIObj,
	int theLayerId);
extern "C" DECL_EXPORT int AIS_InteractiveContext_GetZLayer5DD8A2CA(
	void* instance,
	void* theIObj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_RedisplayB05E0FC3(
	void* instance,
	void* aniobj,
	bool updateviewer,
	bool allmodes);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Redisplay766D350B(
	void* instance,
	int aTypeOfObject,
	int Signature,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_RecomputePrsOnlyB05E0FC3(
	void* instance,
	void* anIobj,
	bool updateviewer,
	bool allmodes);
extern "C" DECL_EXPORT void AIS_InteractiveContext_RecomputeSelectionOnly5DD8A2CA(
	void* instance,
	void* anIObj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Update7BDA0103(
	void* instance,
	void* anIobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDisplayModeFDB02EB(
	void* instance,
	void* aniobj,
	int aMode,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetDisplayMode7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSelectionMode4F47E777(
	void* instance,
	void* aniobj,
	int aMode);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetSelectionMode5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetLocation852B9922(
	void* instance,
	void* aniobj,
	void* aLocation);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ResetLocation5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasLocation5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_Location5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetCurrentFacingModelCD8717A5(
	void* instance,
	void* aniobj,
	int aModel);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetColor80F07260(
	void* instance,
	void* aniobj,
	int aColor,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetColorCCA19205(
	void* instance,
	void* aniobj,
	void* aColor,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetColor7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetWidthADEC6198(
	void* instance,
	void* aniobj,
	double aValue,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetWidth7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetMaterial4D782AAE(
	void* instance,
	void* aniobj,
	int aName,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetMaterial7BDA0103(
	void* instance,
	void* anObj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetTransparencyADEC6198(
	void* instance,
	void* aniobj,
	double aValue,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetTransparency7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDegenerateModel157E506C(
	void* instance,
	void* aniobj,
	int aModel,
	double aRatio);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDegenerateModelE6DFDFE0(
	void* instance,
	int aModel,
	double aSkipRatio);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetLocalAttributes6233D91F(
	void* instance,
	void* aniobj,
	void* aDrawer,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnsetLocalAttributes7BDA0103(
	void* instance,
	void* anObj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetPolygonOffsets6907E6A5(
	void* instance,
	void* anObj,
	int aMode,
	double aFactor,
	double aUnits,
	bool updateviewer);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasPolygonOffsets5DD8A2CA(
	void* instance,
	void* anObj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_PolygonOffsets330EF62(
	void* instance,
	void* anObj,
	int* aMode,
	double* aFactor,
	double* aUnits);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetTrihedronSizeC85E5E0F(
	void* instance,
	double aSize,
	bool updateviewer);
extern "C" DECL_EXPORT double AIS_InteractiveContext_TrihedronSize(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_PlaneSize9F0E714F(
	void* instance,
	double* XSize,
	double* YSize);
extern "C" DECL_EXPORT int AIS_InteractiveContext_DisplayStatus5DD8A2CA(
	void* instance,
	void* anIobj);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsDisplayed5DD8A2CA(
	void* instance,
	void* anIobj);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsDisplayed4F47E777(
	void* instance,
	void* aniobj,
	int aMode);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsInCollector5DD8A2CA(
	void* instance,
	void* anIObj);
extern "C" DECL_EXPORT int AIS_InteractiveContext_DisplayPriority5DD8A2CA(
	void* instance,
	void* anIobj);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_HasColor5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT int AIS_InteractiveContext_Color5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ColorE6084039(
	void* instance,
	void* aniobj,
	void* acolor);
extern "C" DECL_EXPORT double AIS_InteractiveContext_Width5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_StatusE16287D5(
	void* instance,
	void* anObj,
	void* astatus);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UpdateCurrentViewer(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UpdateCollector(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_DisplayMode(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_MainPrsMgr(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_CollectorPrsMgr(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_MainSelector(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_LocalSelector(void* instance);
extern "C" DECL_EXPORT void* AIS_InteractiveContext_CollectorSelector(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_HighestIndex(void* instance);