Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/AIS/AISInteractiveContext.cs

		public PrsMgrPresentationManager3d MainPrsMgr{
			get {
				return new PrsMgrPresentationManager3d(AIS_InteractiveContext_MainPrsMgr(Instance));
			}
		}
		public PrsMgrPresentationManager3d CollectorPrsMgr{
			get {
				return new PrsMgrPresentationManager3d(AIS_InteractiveContext_CollectorPrsMgr(Instance));
			}
		}
		public StdSelectViewerSelector3d MainSelector{
			get {
				return new StdSelectViewerSelector3d(AIS_InteractiveContext_MainSelector(Instance));
			}
		}
		public StdSelectViewerSelector3d LocalSelector{
			get {
				return new StdSelectViewerSelector3d(AIS_InteractiveContext_LocalSelector(Instance));
			}
		}
		public StdSelectViewerSelector3d CollectorSelector{
			get {
				return new StdSelectViewerSelector3d(AIS_InteractiveContext_CollectorSelector(Instance));
			}
		}
		public int HighestIndex{
			get {
				return AIS_InteractiveContext_HighestIndex(Instance);
			}
		}
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Ctor79560492(IntPtr MainViewer);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Ctor27F4A3E3(IntPtr MainViewer,IntPtr Collector);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Delete(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_CloseCollector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_OpenCollector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Display7BDA0103(IntPtr instance, IntPtr anIobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayBB87E00C(IntPtr instance, IntPtr anIobj,int amode,int aSelectionMode,bool updateviewer,bool allowdecomposition);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_LoadFDB02EB(IntPtr instance, IntPtr aniobj,int SelectionMode,bool AllowDecomp);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_EraseB05E0FC3(IntPtr instance, IntPtr aniobj,bool updateviewer,bool PutInCollector);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_EraseModeFDB02EB(IntPtr instance, IntPtr aniobj,int aMode,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_EraseAllAE8C3818(IntPtr instance, bool PutInCollector,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayAllAE8C3818(IntPtr instance, bool OnlyFromCollector,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplayFromCollector7BDA0103(IntPtr instance, IntPtr anIObj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_EraseSelectedAE8C3818(IntPtr instance, bool PutInCollector,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisplaySelected461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_KeepTemporary4F47E777(IntPtr instance, IntPtr anIObj,int InWhichLocal);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Clear7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ClearPrsFDB02EB(IntPtr instance, IntPtr aniobj,int aMode,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Remove7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_RemoveAll461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Hilight7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_HilightWithColor80F07260(IntPtr instance, IntPtr aniobj,int aCol,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Unhilight7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDisplayPriority4F47E777(IntPtr instance, IntPtr anIobj,int aPriority);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetZLayer4F47E777(IntPtr instance, IntPtr theIObj,int theLayerId);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_GetZLayer5DD8A2CA(IntPtr instance, IntPtr theIObj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_RedisplayB05E0FC3(IntPtr instance, IntPtr aniobj,bool updateviewer,bool allmodes);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Redisplay766D350B(IntPtr instance, int aTypeOfObject,int Signature,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_RecomputePrsOnlyB05E0FC3(IntPtr instance, IntPtr anIobj,bool updateviewer,bool allmodes);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_RecomputeSelectionOnly5DD8A2CA(IntPtr instance, IntPtr anIObj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Update7BDA0103(IntPtr instance, IntPtr anIobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDisplayModeFDB02EB(IntPtr instance, IntPtr aniobj,int aMode,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetDisplayMode7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSelectionMode4F47E777(IntPtr instance, IntPtr aniobj,int aMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetSelectionMode5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetLocation852B9922(IntPtr instance, IntPtr aniobj,IntPtr aLocation);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ResetLocation5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasLocation5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr AIS_InteractiveContext_Location5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetCurrentFacingModelCD8717A5(IntPtr instance, IntPtr aniobj,int aModel);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetColor80F07260(IntPtr instance, IntPtr aniobj,int aColor,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetColorCCA19205(IntPtr instance, IntPtr aniobj,IntPtr aColor,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetColor7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetWidthADEC6198(IntPtr instance, IntPtr aniobj,double aValue,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetWidth7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetMaterial4D782AAE(IntPtr instance, IntPtr aniobj,int aName,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetMaterial7BDA0103(IntPtr instance, IntPtr anObj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetTransparencyADEC6198(IntPtr instance, IntPtr aniobj,double aValue,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetTransparency7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDegenerateModel157E506C(IntPtr instance, IntPtr aniobj,int aModel,double aRatio);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDegenerateModelE6DFDFE0(IntPtr instance, int aModel,double aSkipRatio);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetLocalAttributes6233D91F(IntPtr instance, IntPtr aniobj,IntPtr aDrawer,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnsetLocalAttributes7BDA0103(IntPtr instance, IntPtr anObj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetPolygonOffsets6907E6A5(IntPtr instance, IntPtr anObj,int aMode,double aFactor,double aUnits,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasPolygonOffsets5DD8A2CA(IntPtr instance, IntPtr anObj);
        //[DllImport("NaroOccCore.dll")]
        //private static extern void AIS_InteractiveContext_PolygonOffsets330EF62(IntPtr instance, IntPtr anObj,ref int aMode,ref double aFactor,ref double aUnits);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetTrihedronSizeC85E5E0F(IntPtr instance, double aSize,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_TrihedronSize(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_PlaneSize9F0E714F(IntPtr instance, ref double XSize,ref double YSize);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_DisplayStatus5DD8A2CA(IntPtr instance, IntPtr anIobj);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsDisplayed5DD8A2CA(IntPtr instance, IntPtr anIobj);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsDisplayed4F47E777(IntPtr instance, IntPtr aniobj,int aMode);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsInCollector5DD8A2CA(IntPtr instance, IntPtr anIObj);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_DisplayPriority5DD8A2CA(IntPtr instance, IntPtr anIobj);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_HasColor5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_Color5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ColorE6084039(IntPtr instance, IntPtr aniobj,IntPtr acolor);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_Width5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_StatusE16287D5(IntPtr instance, IntPtr anObj,IntPtr astatus);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UpdateCurrentViewer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UpdateCollector(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_DisplayMode(IntPtr instance);
